src/LuckyDraw V1.0/src/objects/Charket__WeChatFollower__c.object
<CustomObject>
    <fields>
        <fullName>BadgeCompany__c</fullName>
        <label>Badge Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeId__c</fullName>
        <label>Badge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeName__c</fullName>
        <label>Badge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgePrintDate__c</fullName>
        <label>Badge Print Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__ActivityCount__c</fullName>
        <formula>Charket__MessageCount__c + Charket__EventCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WeChat Followers</relationshipLabel>
        <relationshipName>WeChatFollowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__DisplayName__c</fullName>
        <description>Used to flexible Name and Alias__c order by</description>
        <formula>IF( Charket__Alias__c == null,  Name,  Charket__Alias__c )</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__EventCount__c</fullName>
        <label>Event Count</label>
        <summarizedField>Charket__WeChatTranscript__c.Charket__FollowerEventCount__c</summarizedField>
        <summaryForeignKey>Charket__WeChatTranscript__c.Charket__WeChatFollower__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charket__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__IsBlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsFollowing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Following</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__LastActivityTime__c</fullName>
        <label>Last Activity Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__LastMassSentTime__c</fullName>
        <label>Last Mass Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>WeChat Followers</relationshipLabel>
        <relationshipName>WeChatFollowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__MassSentCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mass Sent Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__MessageCount__c</fullName>
        <label>Message Count</label>
        <summarizedField>Charket__WeChatTranscript__c.Charket__FollowerMessageCount__c</summarizedField>
        <summaryForeignKey>Charket__WeChatTranscript__c.Charket__WeChatFollower__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charket__OpenId__c</fullName>
        <externalId>true</externalId>
        <label>Open ID</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__ProfilePhotoUrl__c</fullName>
        <label>Profile Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__ProfilePhoto__c</fullName>
        <formula>IF(NOT(ISBLANK(Charket__WeChatProfilePhotoUrl__c)), IMAGE( IF( BEGINS(Charket__WeChatProfilePhotoUrl__c, &apos;https&apos;) , Charket__WeChatProfilePhotoUrl__c ,&apos;https&apos; +  RIGHT(Charket__WeChatProfilePhotoUrl__c,  LEN(Charket__WeChatProfilePhotoUrl__c) - 4 ) ) , &apos;No Attachment&apos;, 100, 100), &apos;&apos;)</formula>
        <label>Profile Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__SubscriptionDate__c</fullName>
        <label>Subscription Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Charket__Contact__c)),
  &apos;Contact&apos;,
  IF(NOT(ISBLANK(Charket__Lead__c)),
     &apos;Lead&apos;,
     &apos;Follower&apos;
  )
)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__UnduplicatedCount__c</fullName>
        <description>Only use for counting the Grouping Rows in a report</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unduplicated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__UniqueCode__c</fullName>
        <label>Unique Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__UnsubscriptionDate__c</fullName>
        <label>Unsubscription Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Followers</relationshipLabel>
        <relationshipName>WeChatFollowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatProfilePhotoUrl__c</fullName>
        <label>WeChat Profile Photo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WeChat Follower</label>
    <nameField>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Followers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>